fix: uneven padding on content

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -99,7 +99,7 @@ body {
     gap: 0px;
     flex: 1 1 auto;
     min-width: 400px;
-    padding: 16px 10px 60px 0;
+    padding: 16px 36px 60px 0;
 }
 
 .links-container {
